--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
     "@mdx-js/mdx": "^0.16.8",
     "@mdx-js/tag": "^0.16.8",
     "babel-plugin-styled-components": "^1.10.0",
-    "gatsby": "^2.0.78",
+    "gatsby": "^2.0.106",
     "gatsby-image": "^2.0.25",
     "gatsby-mdx": "^0.3.5",
-    "gatsby-plugin-manifest": "^2.0.13",
-    "gatsby-plugin-netlify": "^2.0.6",
-    "gatsby-plugin-offline": "^2.0.20",
+    "gatsby-plugin-manifest": "^2.0.15",
+    "gatsby-plugin-netlify": "^2.0.7",
+    "gatsby-plugin-offline": "^2.0.22",
     "gatsby-plugin-react-helmet": "^3.0.5",
-    "gatsby-plugin-sharp": "^2.0.17",
+    "gatsby-plugin-sharp": "^2.0.19",
     "gatsby-plugin-styled-components": "^3.0.4",
-    "gatsby-source-filesystem": "^2.0.12",
-    "gatsby-transformer-sharp": "^2.1.9",
+    "gatsby-remark-responsive-iframe": "^2.0.8",
+    "gatsby-source-filesystem": "^2.0.18",
+    "gatsby-transformer-remark": "^2.2.2",
+    "gatsby-transformer-sharp": "^2.1.13",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -26,7 +28,6 @@
     "react-spring": "^7.2.7",
     "styled-components": "^4.1.3",
     "tailwind.macro": "^0.5.10",
-    "tailwindcss": "^0.7.3",
     "typeface-cantata-one": "^0.0.54",
     "typeface-open-sans": "^0.0.54"
   },
@@ -52,7 +53,8 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.0",
-    "prettier": "^1.15.3"
+    "prettier": "^1.15.3",
+    "tailwindcss": "^0.7.4"
   },
   "repository": {
     "url": "https://github.com/LekoArts/gatsby-starter-portfolio-cara",
